In the transform test only include xml records to be sent in the final test

--- a/src/overview.html
+++ b/src/overview.html
@@ -7,6 +7,7 @@
        		<ul>
            		<li>{@link com.k_int.euinside.client.module.dataTransformation.Transform Data Transformation}</li>
            		<li>{@link com.k_int.euinside.client.module.metadataDefinition.Definition Metadata Definition}</li>
+           		<li>{@link com.k_int.euinside.client.module.europeana.Statistics Europeana Statistics}</li>
            		<li>{@link com.k_int.euinside.client.module.pidgenerate.PIDGenerate PID Generation}</li>
            		<li>{@link com.k_int.euinside.client.module.preview.Preview Preview}</li>
            		<li>{@link com.k_int.euinside.client.module.setmanager.SetManager Set Manager}</li>
