--- a/src/overview.html
+++ b/src/overview.html
@@ -15,6 +15,7 @@
            		<li>{@link com.k_int.euinside.client.module.validation.Validate Validation (Alternates between monguz and semantika)}</li>
            		<li>{@link com.k_int.euinside.client.module.validation.ValidateMonguz Validation (monguz)}</li>
            		<li>{@link com.k_int.euinside.client.module.validation.ValidateSemantika Validation (semantika)}</li>
+                <li>{@link com.k_int.euinside.client.module.sword.SWORDPush SWORD v1 client}</li>
        		</ul>
        		<br/>
        		Before a call is made to any module the base url of the ECKCore module needs to be set,
@@ -99,6 +100,11 @@
        				<td>httpmime</td>
        				<td>4.2.1</td>
        			</tr>
+                <tr>
+                    <td>org.swordapp</td>
+                    <td>sword-common</td>
+                    <td>1.2-SNAPSHOT</td>
+                </tr>
        		</table>
 		</p>
 	</BODY>
