--- a/src/overview.html
+++ b/src/overview.html
@@ -101,9 +101,9 @@
        				<td>4.2.1</td>
        			</tr>
                 <tr>
-                    <td>org.swordapp</td>
+                    <td>sword</td>
                     <td>sword-common</td>
-                    <td>1.2-SNAPSHOT</td>
+                    <td>1.3</td>
                 </tr>
        		</table>
 		</p>
