--- a/src/overview.html
+++ b/src/overview.html
@@ -7,6 +7,7 @@
        		<ul>
            		<li>{@link com.k_int.euinside.client.module.dataTransformation.Transform Data Transformation}</li>
            		<li>{@link com.k_int.euinside.client.module.metadataDefinition.Definition Metadata Definition}</li>
+           		<li>{@link com.k_int.euinside.client.module.aggregator.EuropeanaEnrichments Europeana Enrichments}</li>
            		<li>{@link com.k_int.euinside.client.module.aggregator.EuropeanaStatistics Europeana Statistics}</li>
            		<li>{@link com.k_int.euinside.client.module.pidgenerate.PIDGenerate PID Generation}</li>
            		<li>{@link com.k_int.euinside.client.module.preview.Preview Preview}</li>
@@ -100,6 +101,12 @@
        				<td>httpmime</td>
        				<td>4.2.1</td>
        			</tr>
+       			<tr>
+       				<td>org.codehaus.woodstox</td>
+       				<td>woodstox-core-asl</td>
+       				<td>4.2.0</td>
+       			</tr>
+      			
                 <tr>
                     <td>sword</td>
                     <td>sword-common</td>
