Fixed a couple of javadoc problems

--- a/src/overview.html
+++ b/src/overview.html
@@ -7,7 +7,7 @@
        		<ul>
            		<li>{@link com.k_int.euinside.client.module.dataTransformation.Transform Data Transformation}</li>
            		<li>{@link com.k_int.euinside.client.module.metadataDefinition.Definition Metadata Definition}</li>
-           		<li>{@link com.k_int.euinside.client.module.aggregator.EuropeanaEnrichments Europeana Enrichments}</li>
+           		<li>{@link com.k_int.euinside.client.module.aggregator.EuropeanaDataEnrichments Europeana Enrichments}</li>
            		<li>{@link com.k_int.euinside.client.module.aggregator.EuropeanaStatistics Europeana Statistics}</li>
            		<li>{@link com.k_int.euinside.client.module.pidgenerate.PIDGenerate PID Generation}</li>
            		<li>{@link com.k_int.euinside.client.module.preview.Preview Preview}</li>
